<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mau_da_cam"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60sp"
        android:gravity="center"
        android:shadowColor="#0793b6"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/forgot_pass"
        android:textColor="#673AB7"
        android:textSize="40sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/txtTieuDe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pless_enter"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtXacNhanEmail"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_dangnhap"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>