<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mau_da_cam"
    tools:context="com.example.ba_hung.hocfirebaseauth.ui.fragment.FragmentLoginGoogle">

    <com.google.android.gms.common.SignInButton
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtUserName"
        android:textColor="#00C853"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/nguyenHung"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtEmail"
        android:text="@string/templeEmail"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#00E676"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/button_dangnhap"
        android:text="@string/dangXuat"
        android:layout_width="320dp"
        android:layout_height="wrap_content" />

</LinearLayout>
