<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mau_da_cam"
    tools:context="com.example.ba_hung.hocfirebaseauth.ui.fragment.FragmentLogin">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtNameApp"
        android:textColor="#673AB7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/aoo_demo"
        android:textSize="50sp"
        android:shadowColor="#0793b6"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:typeface="serif"
        android:shadowDy="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <Button
        android:id="@+id/btnLoginFaceInSigIn"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/button_facebook"
        android:drawableLeft="@drawable/iconfacebook"
        android:text="@string/loginWithFace"
        app:layout_constraintLeft_toLeftOf="@+id/btnLoginWithEmail"
        app:layout_constraintRight_toRightOf="@+id/btnLoginWithEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithEmail" />

    <Button
        android:id="@+id/btnLogInGoogleLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/button_google"
        android:drawableLeft="@drawable/icongoogle"
        android:text="@string/loginWithGoogle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/btnLoginFaceInSigIn"
        app:layout_constraintRight_toRightOf="@+id/btnLoginFaceInSigIn"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFaceInSigIn" />

    <Button
        android:id="@+id/btnLoginWithNumberPhone"
        android:layout_width="0dp"
        android:background="@drawable/button_sdt"
        android:layout_height="wrap_content"
        android:text="@string/loginWithSDT"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnLoginWithEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginWithEmail"
        android:background="@drawable/button_email"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithNumberPhone"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btnLoginWithNumberPhone"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnLoginWithNumberPhone"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>
