<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mau_da_cam"
    tools:context="com.example.ba_hung.hocfirebaseauth.ui.fragment.FragmentRegister">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtNameApp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:shadowColor="#0793b6"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/aoo_demo"
        android:textColor="#673AB7"
        android:textSize="50sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#e2e1e1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtRepeatePass"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/nhaplai"
        android:inputType="textPassword"
        android:textColorHint="#e2e1e1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="147dp" />

    <Button
        android:id="@+id/btnDangKi"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_dangnhap"
        android:text="@string/dangKy"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtPassword"
        app:layout_constraintRight_toRightOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtRepeatePass" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="318dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="#e2e1e1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

</android.support.constraint.ConstraintLayout>
