<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mau_da_cam"
    tools:context="com.example.ba_hung.hocfirebaseauth.ui.fragment.FragmentProfile">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/aoo_demo"
        android:textColor="#673AB7"
        android:textSize="50sp"
        android:shadowColor="#0793b6"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:typeface="serif"
        android:shadowDy="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="#263238"
        android:text="@string/templeEmail"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="71dp"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <Button
        android:id="@+id/btnDangXuatProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangXuat"
        android:background="@drawable/button_dangnhap"
        android:layout_marginRight="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintRight_toRightOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtName" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/noavatar"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nguyen Van A"
        android:textSize="24sp"
        android:textColor="#263238"
        android:textStyle="bold|italic"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txtEmail"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtEmail" />

</android.support.constraint.ConstraintLayout>
